@@ -3,37 +3,44 @@ package org.joget.commons.spring.model;
 import java.io.Serializable;
 import java.text.Normalizer;
 import java.util.Collection;
-import org.springframework.orm.hibernate5.support.HibernateDaoSupport;
 import java.util.List;
-import org.hibernate.Criteria;
 import org.hibernate.Session;
 import org.hibernate.SessionFactory;
-import org.hibernate.criterion.Example;
 import org.hibernate.query.Query;
 import org.joget.commons.util.StringUtil;
 
-public abstract class AbstractSpringDao extends HibernateDaoSupport {
+public abstract class AbstractSpringDao {
 
+    SessionFactory sessionFactory;
+    
     public AbstractSpringDao() {
+    }
+    
+    public void setSessionFactory(SessionFactory sf) {
+        this.sessionFactory = sf;
+    }
+    
+    public SessionFactory getSessionFactory() {
+        return sessionFactory;
     }
 
     public Session findSession() {
         Session session;
-        SessionFactory sf = super.getSessionFactory();
+        SessionFactory sf = this.sessionFactory;
         session = sf.getCurrentSession();
         return session;
     }
     
     protected Serializable save(String entityName, Object obj) {
         Session session = findSession();
-        Serializable save = session.save(entityName, obj);
+        Serializable save = (Serializable)session.merge(entityName, obj);
         session.flush();
         return save;
     }
 
     protected void saveOrUpdate(String entityName, Object obj) {
         Session session = findSession();
-        session.saveOrUpdate(entityName, obj);
+        session.merge(entityName, obj);
         session.flush();
     }
 
@@ -45,7 +52,7 @@ public abstract class AbstractSpringDao extends HibernateDaoSupport {
 
     protected void delete(String entityName, Object obj) {
         Session session = findSession();
-        session.delete(entityName, obj);
+        session.remove(obj);
         session.flush();
     }
 
@@ -57,15 +64,6 @@ public abstract class AbstractSpringDao extends HibernateDaoSupport {
             result = list.iterator().next();
         }
         return result;
-    }
-
-    protected List findByExample(String entityName, Object object) {
-        Session session = findSession();
-        Criteria crit = session.createCriteria(object.getClass());
-        Example example = Example.create(object);
-        crit.add(example);
-        crit.setCacheable(true);
-        return crit.list();        
     }
 
     protected Collection find(final String entityName, final String condition, final Object[] params, final String sort, final Boolean desc, final Integer start, final Integer rows) {
@@ -120,7 +118,7 @@ public abstract class AbstractSpringDao extends HibernateDaoSupport {
         if (!newCondition.contains(" group by ")) {
             return (Long) result.get(0);
         } else {
-            return new Long(result.size());
+            return Long.valueOf(result.size());
         }
     }
     
